--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,5 @@
 #app {
-  width: 100%;
-  height: 100vh;
-  background-color: azure;
-}
-
-@media (max-width: 1100px) {
-  #form-wrapper {
-    width: 70vw;
-  }
-}
-
-@media (max-width: 670px) {
-  #form-wrapper {
-    width: 90vw;
-  }
+    width: 100%;
+    min-height: 100vh;
+    background: rgb(140, 78, 255);
 }
